<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tab_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/carros"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

    <TextView
        android:id="@+id/tv_tab_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/favoritos"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_tab_carros"
        app:layout_constraintTop_toTopOf="@+id/tv_tab_carros" />

    <ImageView
        android:id="@+id/iv_car_imagem"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/eletric_car"
        app:layout_constraintLeft_toLeftOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/tv_tab_carros" />

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/preco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_car_imagem" />

    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="R$ 120.000"
        app:layout_constraintStart_toEndOf="@+id/tv_preco"
        app:layout_constraintTop_toBottomOf="@id/iv_car_imagem" />

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/bateria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preco" />

    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="93,4 kwh"
        app:layout_constraintStart_toEndOf="@+id/tv_bateria"
        app:layout_constraintTop_toBottomOf="@id/tv_preco" />

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/potencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

    <TextView
        android:id="@+id/tv_patencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="646 cv"
        app:layout_constraintStart_toEndOf="@+id/tv_potencia"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/recarga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

    <TextView
        android:id="@+id/tv_recarga_value"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="23 min"
        app:layout_constraintStart_toEndOf="@+id/tv_potencia"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/preco_kwh"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@+id/tv_recarga" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/km_percorrido"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@+id/et_preco_kwh" />
    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular"
        android:text=""
        />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/calcular"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido" />


</androidx.constraintlayout.widget.ConstraintLayout>